fixed title vertical spacing

--- a/style/nersc-theme.css
+++ b/style/nersc-theme.css
@@ -144,7 +144,7 @@ section.title {
 section.title::before {
   content: "";
   position: absolute;
-  top: 40px;
+  top: 80px;
   left: calc(25% / 2 - 96px);
   width: 192px;
   height: 256px;
@@ -178,18 +178,18 @@ section.title h3 {
 }
 
 section.title h1 {
-  top: 144px;
+  top: 184px;
   font-size: 48px;
 }
 
 section.title h2 {
-  top: 202px;
+  top: 242px;
   font-size: 36px;
   font-weight: normal;
 }
 
 section.title h3 {
-  top: 267px;
+  top: 307px;
   font-size: 24px;
   font-weight: normal;
 }
